--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       MYSQL_ROOT_PASSWORD: password
     volumes:
       #            # Pour lancer un dump automatiquement au montage du conteneur
-      - ./data.sql:/docker-entrypoint-initdb.d/dump.sql
+      #- ./data.sql:/docker-entrypoint-initdb.d/dump.sql
 
 
   phpmyadmin:
