--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     environment:
       MYSQL_DATABASE: data
       MYSQL_ROOT_PASSWORD: password
-    volumes:
+    #volumes:
       #            # Pour lancer un dump automatiquement au montage du conteneur
       #- ./data.sql:/docker-entrypoint-initdb.d/dump.sql
 
