--- a/app/wp-content/themes/wphetic/src/style/prepros.config
+++ b/app/wp-content/themes/wphetic/src/style/prepros.config
@@ -67,7 +67,8 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/main.css"
         ],
         "exceptions": []
       }
@@ -912,6 +913,20 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "main.css",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            },
+            "minify-css": {
+              "enable": false
+            }
+          }
+        }
+      }
+    ]
   }
 }
