--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -40,7 +40,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Git Pull
         run: |
-          echo 'essaie d'un git pull'
+          echo essaie d'un git pull
           sudo git pull
 
       # Runs a set of commands using the runners shell
