--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Git Pull
         run: |
           echo essaie d'un git pull
-          sudo git pull
+          ifconfig
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
