--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,7 +37,10 @@ jobs:
           # content of ssh private key. ex raw content of ~/.ssh/id_rsa
           key: ${{ secrets.SECRET }}
           script: |
-            ip addr
+            cd marmichlingue
+            git fetch --all
+            git reset --hard origin/main
+            docker-compose build
             ls -al
 
       # Runs a set of commands using the runners shell
