--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
 
   db:
     image: 'mariadb'
+    ports:
+      - '3306:80'
     restart: always
     environment:
       MYSQL_DATABASE: data
