--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,11 +37,12 @@ jobs:
           # content of ssh private key. ex raw content of ~/.ssh/id_rsa
           key: ${{ secrets.SECRET }}
           script: |
-            wp --info
             cd marmichlingue
             git fetch --all
             git reset --hard origin/main
             docker-compose build
+            sudo docker-compose exec php wp option update home 'http://185.189.159.104/' --allow-root
+            sudo docker-compose exec php wp option update siteurl 'http://185.189.159.104/' --allow-root
             ls -al
 
       # Runs a set of commands using the runners shell
