--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -40,7 +40,7 @@ jobs:
             cd marmichlingue
             git fetch --all
             git reset --hard origin/main
-            docker-compose build
+            docker-compose up -d
             sudo docker-compose exec -T php wp option update home 'http://185.189.159.104/' --allow-root
             sudo docker-compose exec -T php wp option update siteurl 'http://185.189.159.104/' --allow-root
             sudo docker-compose exec -T php wp search-replace 'http://localhost:2345/' 'http://185.189.159.104/' --allow-root
